--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,15 @@ body{
 	padding: 0;
 	margin:0;
 	overflow: hidden;
+	position: absolute;
+}
+
+.score{
+	font-family: sans-serif;
+	position: absolute;
+	top: 0;
+	right: 10vw;
+	z-index: 2;
+	color: white;
+	font-size: 20px;
 }
