--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,38 @@ body{
 	padding: 0;
 	margin:0;
 	overflow: hidden;
-	position: absolute;
+	font-family: sans-serif;
+	background-color: #000;
 }
 
 .score{
-	font-family: sans-serif;
 	position: absolute;
 	top: 0;
 	right: 10vw;
 	z-index: 2;
 	color: white;
 	font-size: 20px;
+}
+
+h1{
+	font-size: 5em;
+	color: #FFEEFF;
+	text-align: center;
+	margin-bottom: 15vh;
+	margin-top: 18vh;
+}
+
+a{
+	display: block;
+	text-align: center;
+	border: 2px solid #555555;
+	color: #FFEEFF;
+	padding: 1.6vh 0;
+	width: 18vw;
+	margin: 0 auto;
+	text-decoration: none;
+	margin-bottom: 3vh;
+}
+a:hover{
+	border: 2px solid #AAA;
 }
